# iucn-red-list-client

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: README.md  iucn_client.json.example
docs/: CHANGELOG.md  INSTALLATION.md  README.md
examples/: README.md  SPECIES_CHECKER_README.md  basic_usage.py  check_species_status.py  conservation_analysis.py  sample_species.csv  sample_species_conservation_status.csv
iucn_red_list_client/: __init__.py  __version__.py  api_endpoints.py  cli.py  client.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_api_client.py  test_cli.py  test_endpoints.py  test_integration.py  test_species_checker.py
tools/: README.md  openapi.yaml
